added depends on for the api

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       - '3001:3001'
     environment:
       - PORT=${PORT}
+    depends_on:
+      - redis
     networks:
       swapi-network:
 
